force-app/main/default/objects/VICentre_Section__c/VICentre_Section__c.object-meta.xml
<CustomObject>
    <label>Centre / Section</label>
    <nameField>
        <label>Nom de Centre / Section</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Centres / Sections</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>