force-app/main/default/objects/VICentre_Section__c/fields/Cle_pour_le_tri__c.field-meta.xml
<CustomField>
    <fullName>Cle_pour_le_tri__c</fullName>
    <formula>if(isnumber(left(Name,3)), 
       text(value(left(Name,3))*1000),
       &apos;999&apos;+left(Name,3)
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clé pour le tri</label>
    <type>Text</type>
</CustomField>