force-app/main/default/objects/VICentre_Section__c/fields/Lib_EN__c.field-meta.xml
<CustomField>
    <fullName>Lib_EN__c</fullName>
    <label>Lib_EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>