force-app/main/default/objects/VICentre_Section__c/fields/Lib_PL__c.field-meta.xml
<CustomField>
    <fullName>Lib_PL__c</fullName>
    <label>Lib_PL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>